change the bench to see the difference betweeen a flat array and a non-flat array